# uv-docker-benchmark

./: .dockerignore  LICENSE  README.md  benchmark_docker_images.py  multistage.Dockerfile  pyproject.toml
