[project]
name = "uv-docker-benchmark"
version = "0.1.0"
description = "Docker Benchmarking Example"
requires-python = ">=3.12,<3.13"
# dependencies = [
#     "fastapi[standard]>=0.112.2",
# ]

dependencies = [
    "fastapi[standard]>=0.112.2",
    "scikit-learn>=1.5.1, <2",
    "mlflow==2.17.2",
    "numpy>=1.26.4, <2",
    "pandas>=2.2.2, <3",
    "pyarrow>=14.0.0, <15",
    "scipy>=1.14.1, <2",
    "pydantic>=2.9.0, <3",
    "lightgbm>=4.6.0",
    "tensorflow>=2.19.0",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "fastapi-cli>=0.0.5",
]

